# webprint

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile.backend  Dockerfile.proxy  LICENSE  README.rst  docker-compose.yml  k8s-config.yml.example  nginx.conf  pyproject.toml  setup.cfg
.github/workflows/: static-analysis.yml
chart/webprint/: Chart.yaml  values.yaml
chart/webprint/templates/: _helpers.tpl  config.yaml  deploy.yaml  ingress.yaml  job.yaml  service.yaml  volumes.yaml
project/: settings.py  urls.py
project/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
project/static/: base.css
project/templates/: base.html
webprint/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
webprint/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
webprint/management/commands/: deleteoldprints.py
webprint/migrations/: 0001_initial.py  0002_auto_20210912_2129.py
webprint/templates/webprint/: print_detail.html  print_form.html  print_list.html
