[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "webprint"
version = "0.2.0-dev"
description = "Compartilhador de prints e imagens"
authors = ["Eduardo Klosowski <eduardo_klosowski@yahoo.com>"]
readme = "README.rst"
license = "MIT"
repository = "https://github.com/eduardoklosowski/webprint"
packages = [
    { include = "project" },
    { include = "webprint" },
]

[tool.poetry.dependencies]
python = "^3.7"
dj-database-url = "^0.5.0"
django = "~3.1"
mysqlclient = { version = "^2.0", optional = true }
pillow = "^7.2.0"
psycopg2-binary = { version = "^2.8", optional = true }

[tool.poetry.dev-dependencies]
flake8 = "^3.8"
honcho = "^1.0.1"
isort = "^5.6"

[tool.poetry.extras]
mysql = ["mysqlclient"]
pgsql = ["psycopg2-binary"]
